--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -313,30 +313,30 @@ button {
 
   &__chev {
     z-index: 3;
-    width: 1em;
-    height: 1em;
+    width: 1rem;
+    height: 1rem;
 
     &--up {
       path.st0 {
-        stroke-width: 1em;
+        stroke-width: 1rem;
       }
     }
 
     &--down {
       path.st0 {
-        stroke-width: 1em;
+        stroke-width: 1rem;
       }
     }
 
     &--right {
       path {
-        stroke-width: 1em;
+        stroke-width: 1rem;
       }
     }
 
     &--left {
       path {
-        stroke-width: 1em;
+        stroke-width: 1rem;
       }
     }
   }
@@ -362,31 +362,31 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 4em;
-    width: 4em;
+    height: 3rem;
+    width: 3rem;
     border-radius: 100%;
-    min-height: 4em;
+    min-height: 3rem;
     border: 2px solid;
 
     >.button-image__chev {
-      height: 1em;
-      width: 1em;
+      height: 1.125rem;
+      width: 1.125rem;
     }
   }
   &__jump--flex{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 4em;
-    width: 4em;
+    height: 3rem;
+    width: 3rem;
     border-radius: 100%;
     min-height: 0;
     border: 2px solid;
     flex: 0 1 auto;
 
     >.button-image__chev {
-      height: 1em;
-      width: 1em;
+      height: 1.125rem;
+      width: 1.125rem;
     }
   }
     &__jump--positioned{
@@ -394,14 +394,14 @@ button {
     align-items: center;
     justify-content: center;
     @include vr($margin: 4 auto 2 auto);
-    height: 4em;
-    width: 4em;
+    height: 3rem;
+    width: 3rem;
     border-radius: 100%;
     border: 2px solid;
 
     >.button-image__chev {
-      height: 1em;
-      width: 1em;
+      height: 1.125rem;
+      width: 1.125rem;
     }
   }
   
@@ -410,10 +410,10 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2em;
-    width: 2em;
+    height: 1.5rem;
+    width: 1.5rem;
     border-radius: 100%;
-    min-height: 2em;
+    min-height: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -423,10 +423,10 @@ button {
   }
 
   &__mini-jump--wp {
-    height: 1em;
-    width: 1em;
+    height: 1.5rem;
+    width: 1.5rem;
     border-radius: 100%;
-    min-height: 1em;
+    min-height: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -457,10 +457,10 @@ button {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 2em;
-      width: 2em;
+      height: 1.5rem;
+      width: 1.5rem;
       border-radius: 100%;
-      min-height: 2em;
+      min-height: 1.5rem;
   
       // >.button-image__chev {
       //   height: 1.5em;
@@ -474,14 +474,14 @@ button {
     }
 
     &--black-white {
-      @include vr($margin:2 0 2 0);
+      // @include vr($margin:2 0 2 0);
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 2em;
-      width: 2em;
+      height: 1.5rem;
+      width: 1.5rem;
       border-radius: 100%;
-      min-height: 2em;
+      min-height: 1.5rem;
       border: .15em $white solid;
       // >.button-image__chev {
       //   height: 1.5em;
@@ -498,14 +498,28 @@ button {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 2em;
-      width: 2em;
+      height: 1.5rem;
+      width: 1.5rem;
       border-radius: 100%;
-      min-height: 2em;
+      min-height: 1.5rem;
       background: $primary;
 
       path {
         stroke: $white;
+      }
+    }
+    &--primary-black {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 1.5rem;
+      width: 1.5rem;
+      border-radius: 100%;
+      min-height: 1.5rem;
+      background: $primary;
+
+      path {
+        stroke: $black;
       }
     }
   }
